<resources>
    <string name="app_name">BharatBuzz</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="app_language">App Language</string>
    <string name="about_bharatbuzz">About BharatBuzz</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_language">Select Language</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">90942726818-qgio5m5o6gn6bm7gq20rt9o0m78vcssj.apps.googleusercontent.com</string>
</resources>